# Winnower

./: .gitignore  AGENTS.md  CLAIM_LEDGER.md  CLAUDE.md  Can  MANUSCRIPT_PATCH.md  Makefile  README.md  REPRODUCING.md  REVISION_PLAN.md  SCRIPT_CORRECTNESS_AUDIT.md  SYSTEM_IMPROVEMENTS_NOTES.md  THEORY_NOTE.md  VERDICT.md  editor_brief_math_phd_alife2026_full.md  expected_runs.json  pyproject.toml  repro_worker.js  reproduce.html  results
alife_lba_bundle/: README_rewrite.md
data/: lifewiki_rules.json
docs/: CLAIM_LEDGER.md  THEORY_NOTE.md  modern_bibliography_2026.md
experiments/: __init__.py  entropy_rate_comparison.py  stabilization_analysis.py
notebooks/: paper_companion.ipynb  paper_companion.py  relative_symmetry_repair_demo.executed.ipynb  relative_symmetry_repair_demo.ipynb
outputs/: best_relative_periodic_fits.csv  conclusions.md  lifewiki_survey_T100_rerun.csv  lifewiki_survey_T400_rerun.csv  reflection_repair_comparison.csv  survey_2d_rules.csv  survey_2d_rules_large.csv  survey_2d_rules_large.csv.metadata.json  survey_persistent_defects.csv
paper/: SUBMISSIONS.md  alife2026_lba.tex  alife_experiment_summary.md  alife_figure_snippets.md  alife_table_snippets.md  aristotle_prompts.md  aristotle_prompts_v8.md  author_action_items.md  chatgpt_review_prompt.md  claude_code_theory_refactor_prompt.md  d490d84d-12ca-4724-ab38-21e45e8df18c-output.lean  empirical_integration_notes.md  final_cleanup_notes.md  literature_integration_notes.md  modern_refs.bib  novelty_prior_art_refs.bib  paper_alife2026.aux  paper_alife2026.out  paper_alife2026.tex  paper_v1.md  (+14 more)
(+333 files in other folders)
