[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relative-symmetry-repair"
version = "0.1.0"
description = "Relative symmetry-repair spectra for elementary cellular automata."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "numba>=0.59",
    "lz4>=4.3",
    "typer>=0.12",
    "jupyter>=1.0",
]

[project.scripts]
relative-symmetry-repair = "relative_symmetry_repair.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
